# protobuf-py

./: .gitattributes  .gitignore  .licenseheader.tmpl  DESIGN.md  LICENSE  README.md  protobuf-py.code-workspace  pyproject.toml  vercel.json  zensical.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  docs.yaml  emergency-review-bypass.yaml  notify-approval-bypass.yaml  protoc-runner.yaml  release.yaml
docs/: enums.md  extensions.md  faq.md  index.md  messages.md  serialization.md  tutorial.md  well-known-types.md
docs/_overrides/: main.html
docs/api/: index.md  plugin.md  protobuf.md  wkt.md
docs/generated-code/: features.md  field-types.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/reflection/: custom-options.md  descriptors.md  dynamic-messaging.md  index.md  registry.md
docs/stylesheets/: extra.css
docs/writing-plugins/: generating-files.md  index.md  options.md
examples/grpc/: README.md  buf.gen.yaml  pyproject.toml
examples/grpc/src/example_grpc/: _eliza.py  eliza_client.py  eliza_client_sync.py  eliza_service.py  eliza_service_sync.py
examples/grpc/tests/: conftest.py  test_eliza.py
examples/plugin/: README.md  buf.gen.yaml  pyproject.toml
examples/plugin/proto/user/v1/: user.proto
examples/plugin/src/protoc_gen_rpc/: __init__.py
examples/plugin/tests/: test_rpc.py
examples/protobuf/: README.md  buf.gen.yaml  pyproject.toml
examples/protobuf/proto/: example.proto
examples/protobuf/src/example/: add.py  list.py
examples/protobuf/tests/: test_example.py
src/protobuf/: __init__.py  _bootstrap.py  _descriptors.py  _enum.py  _extension.py  _field_values.py  _file_registry.py  _from_binary.py  _from_json.py  _merge.py  _message.py  _names.py  _native_message.py  _oneof.py  _registry.py  _sanitization.py  _supported_editions.py  _to_binary.py  _to_json.py  _typing.py  _unknown.py  _validate.py  _wkt_registry.py
src/protobuf/_codegen/: __init__.py  _boot.py  _file.py
src/protobuf/_wire/: __init__.py  _binary_reader.py  _binary_writer.py  _text_format.py  _wire_type.py
src/protobuf/plugin/: __init__.py  _file.py  _ident.py  _options.py  _run.py  _schema.py  _source_code_info.py
src/protobuf/wkt/: __init__.py
src/protobuf/wkt/_gen/: any_pb.py  api_pb.py  c_sharp_features_pb.py  cpp_features_pb.py  descriptor_pb.py  duration_pb.py  empty_pb.py  field_mask_pb.py  go_features_pb.py  java_features_pb.py  source_context_pb.py  struct_pb.py  timestamp_pb.py  type_pb.py  wrappers_pb.py
src/protobuf/wkt/_gen/compiler/: plugin_pb.py
src/protobuf/wkt/_mixin/: __init__.py  _any.py  _const.py  _duration.py  _file_descriptor_set.py  _struct.py  _timestamp.py
tests/: buf.gen.yaml  buf.yaml  conftest.py  test_copy.py  test_delimited_encoding.py  test_descriptors.py  test_dynamic.py  test_enum.py  test_error_messages.py  test_escaping.py  test_ext_marshaler.py  test_extensions_proto2.py  test_extensions_proto3.py  test_float.py  test_from_binary.py  test_json.py  test_json_extensions.py  test_json_wkt.py  test_merge_container_emulation.py  test_merge_from_json.py  test_message.py  test_message_container_emulation.py  test_message_eq.py  test_message_init.py  test_message_presence.py  test_names.py  test_new_oneofs.py  test_registry.py  test_repr.py  test_required.py  test_sanitization.py  test_supported_editions.py  test_unknown_fields.py  test_validate.py  test_wkt.py  test_wkt_registry.py
tests/codegen/: test_file.py
tests/conformance/: conformance.py  test_conformance.py
tests/gen_buf/: escaping_pb.py  escaping_proto2_pb.py
tests/plugin/: test_file.py  test_ident.py  test_options.py  test_protoc_gen_grpc_py.py  test_protoc_gen_py.py  test_run.py  test_schema.py  test_source_code_info.py
tests/proto/: comments.proto  defaults.proto  delimited_encoding.proto  enums.proto  escaping.proto  example.proto  extensions_proto2.proto  extensions_proto3.proto  json_names.proto  lists.proto  maps.proto  messages.proto  oneofs.proto  scalars.proto  wkt.proto
tests/proto/modulenames/a-module/: b_service.proto  c_service.proto
tests/proto/modulenames/a_module/: 0_service.proto  b-service.proto  b_service.proto  my.service.proto
tests/proto_buf/: escaping.proto  escaping_proto2.proto
tests/wire/: test_binary_reader.py  test_binary_writer.py
tests/wkt/: test_any.py  test_descriptor.py  test_duration.py  test_struct.py  test_timestamp.py
