[project]
name = "example-grpc"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  # grpcio ships no wheels for PyPy; we do not build it from source there.
  "grpcio>=1.68 ; platform_python_implementation != 'PyPy'",
  "protobuf-py>=0.0.1",
]

[dependency-groups]
dev = [
  "buf-bin==1.71.0",
  "protoc-gen-grpc-py>=0.0.1",
  "protoc-gen-py>=0.0.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
